force-app/main/default/objects/Violation_Type__c/fields/Amount_Earned_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Earned_Formula__c</fullName>
    <label>Amount Earned Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>