force-app/main/default/objects/Violation_Type__c/fields/Amount_Paid_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Formula__c</fullName>
    <label>Amount Paid Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>