force-app/main/default/objects/Violation_Type__c/fields/Assessment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Formula__c</fullName>
    <description>Assessment Formula that Determines the Assessment Calculation.</description>
    <inlineHelpText>Assessment Formula that Determines the Assessment Calculation. 
i.e: 
(A * B)+(A * C)
MAX((A * B),(A * C))</inlineHelpText>
    <label>Penalty Assessment Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>