force-app/main/default/objects/Violation_Type__c/fields/Assessment_Variable_F__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Variable_F__c</fullName>
    <description>Variable &quot;F&quot; in the Assessment Calculation.</description>
    <inlineHelpText>Variable &quot;F&quot; in the Assessment Calculation.</inlineHelpText>
    <label>Assessment Variable F</label>
    <length>255</length>
    <type>Text</type>
</CustomField>