force-app/main/default/objects/Violation_Type__c/fields/ImportFormula__c.field-meta.xml
<CustomField>
    <fullName>ImportFormula__c</fullName>
    <formula>LegacyId15__c &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImportFormula</label>
    <type>Text</type>
</CustomField>