force-app/main/default/objects/Violation_Type__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Holds ID from UAT for use in matching during data import</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>