force-app/main/default/objects/Violation_Type__c/fields/LegacyId15__c.field-meta.xml
<CustomField>
    <fullName>LegacyId15__c</fullName>
    <formula>LEFT( Legacy_ID__c, 15 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LegacyId15</label>
    <type>Text</type>
</CustomField>