force-app/main/default/objects/Violation_Type__c/fields/Lost_Wages__c.field-meta.xml
<CustomField>
    <fullName>Lost_Wages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Wages</label>
    <type>Checkbox</type>
</CustomField>