force-app/main/default/objects/Violation_Type__c/fields/Reporting_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Sub_Category__c</fullName>
    <description>Allows the user to select a sub-category for the reporting category</description>
    <inlineHelpText>Select the sub category for reporting categories that need to have a more granular reporting structure.</inlineHelpText>
    <label>Reporting Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATTY FEES DUE DLSE</fullName>
            </value>
            <value>
                <fullName>ATTY FEES - GARMENT</fullName>
            </value>
            <value>
                <fullName>COMMISSIONS - BLENDED</fullName>
            </value>
            <value>
                <fullName>COMMISSIONS - MIN WAGE</fullName>
            </value>
            <value>
                <fullName>COMMISSIONS - REG WAGE</fullName>
            </value>
            <value>
                <fullName>LD - OT</fullName>
            </value>
            <value>
                <fullName>LOCAL MIN WAGE</fullName>
            </value>
            <value>
                <fullName>PIECE RATE - BLENDED</fullName>
            </value>
            <value>
                <fullName>PIECE RATE - MIN WAGE</fullName>
            </value>
            <value>
                <fullName>PIECE RATE - REG WAGE</fullName>
            </value>
            <value>
                <fullName>SICK LEAVE - PENALTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>