force-app/main/default/objects/Violation_Type__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short Description of the violation to be displayed on the VF page where violations are selected and on the citation document in the table of violations.</description>
    <inlineHelpText>Enter the short description of the violation. This value will be shown on the New Violations page and on the Citation document in the &quot;Description&quot; field on the list of violations.</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>