force-app/main/default/objects/Violation_Type__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Enter a number up to 99000 for sorting the issue types when displayed on the documents</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>