force-app/main/default/objects/Violation_Type__c/fields/Variable_C_Description__c.field-meta.xml
<CustomField>
    <fullName>Variable_C_Description__c</fullName>
    <description>Description of Variable C</description>
    <inlineHelpText>Description of Variable C</inlineHelpText>
    <label>Variable C Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>