force-app/main/default/objects/Violation_Type__c/fields/Variable_D_Description__c.field-meta.xml
<CustomField>
    <fullName>Variable_D_Description__c</fullName>
    <description>Description of Variable D</description>
    <inlineHelpText>Description of Variable D</inlineHelpText>
    <label>Variable D Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>