force-app/main/default/objects/Violation_Type__c/fields/Variable_H_Description__c.field-meta.xml
<CustomField>
    <fullName>Variable_H_Description__c</fullName>
    <inlineHelpText>Description of Variable F. This field is used for the Field Label when the Variable is User Input or a Mapped Field</inlineHelpText>
    <label>Variable H Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>