force-app/main/default/objects/Violation_Type__c/fields/Violation_Text__c.field-meta.xml
<CustomField>
    <fullName>Violation_Text__c</fullName>
    <label>Violation Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>