force-app/main/default/objects/Violation_Type__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <description>Defines the form on which this violation should appear. Used within the violations vfp to group violations into an assessment. All violations created at the same time on a case with the same Citation Form are grouped into a single assessment</description>
    <inlineHelpText>Select the citation form that this violation should appear on. Note that this is for grouping purposes and may not be an actual citation. For example, a NTD would be a citation form even though a penalty may not be levied.</inlineHelpText>
    <label>Citation Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOFE 240A</fullName>
            </value>
            <value>
                <fullName>BOFE 240B</fullName>
            </value>
            <value>
                <fullName>BOFE 335</fullName>
            </value>
            <value>
                <fullName>BOFE 336</fullName>
            </value>
            <value>
                <fullName>BOFE 8</fullName>
            </value>
            <value>
                <fullName>BOFE 812</fullName>
            </value>
            <value>
                <fullName>BOFE 814</fullName>
            </value>
            <value>
                <fullName>BOFE 815</fullName>
            </value>
            <value>
                <fullName>BOFE 816</fullName>
            </value>
            <value>
                <fullName>JEU 238</fullName>
            </value>
            <value>
                <fullName>JEU 238e</fullName>
            </value>
            <value>
                <fullName>LR 240A</fullName>
            </value>
            <value>
                <fullName>Notice to Discontinue - DLSE 84</fullName>
            </value>
            <value>
                <fullName>PW 240A</fullName>
            </value>
            <value>
                <fullName>PW 336</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>