force-app/main/default/objects/Violation_Type__c/fields/VT_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>VT_CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VT CaseSafeID</label>
    <type>Text</type>
</CustomField>