force-app/main/default/objects/Violation_Type__c/fields/Wage_Assessment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Wage_Assessment_Formula__c</fullName>
    <description>Calculation for wage assessment. Can use same or additional fields from the penalty assessment formula.</description>
    <inlineHelpText>Assessment Formula that Determines the Wage Assessment Calculation. 
i.e: 
(A * B)+(A * C)
MAX((A * B),(A * C))</inlineHelpText>
    <label>Wage Assessment Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>