force-app/main/default/objects/Violation_Type__c/fields/Wage_Interest_Assessment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Wage_Interest_Assessment_Formula__c</fullName>
    <label>Wage Interest Assessment Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>