force-app/main/default/objects/Violation_Type__c/fields/X731_Report_Category__c.field-meta.xml
<CustomField>
    <fullName>X731_Report_Category__c</fullName>
    <description>Violations under this type will be reported on the Monthly Statistical Reporting under this category.</description>
    <inlineHelpText>Violations under this type will be reported on the Monthly Statistical Reporting under this category.</inlineHelpText>
    <label>Report Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENALTIES PURSUANT TO LC 1198.5(k)</fullName>
            </value>
            <value>
                <fullName>PENALTIES PURSUANT TO LC 1695(a)(5)</fullName>
            </value>
            <value>
                <fullName>PENALTIES PURSUANT TO LC 226(f)</fullName>
            </value>
            <value>
                <fullName>PENALTIES PURSUANT TO LC 203.1</fullName>
            </value>
            <value>
                <fullName>PENALTIES PURSUANT TO LC 210</fullName>
            </value>
            <value>
                <fullName>ATTORNEY FEES</fullName>
            </value>
            <value>
                <fullName>BONUS</fullName>
            </value>
            <value>
                <fullName>BUSINESS EXPENSES</fullName>
            </value>
            <value>
                <fullName>CAR WASH REGISTRATION</fullName>
            </value>
            <value>
                <fullName>CHILD LABOR</fullName>
            </value>
            <value>
                <fullName>COMMISSION WAGES</fullName>
            </value>
            <value>
                <fullName>CONTRACT RATE</fullName>
            </value>
            <value>
                <fullName>DEDUCTION STATEMENT</fullName>
            </value>
            <value>
                <fullName>UNLAWFUL DEDUCTIONS</fullName>
            </value>
            <value>
                <fullName>FILING FEE</fullName>
            </value>
            <value>
                <fullName>FLC SEXUAL HARASSMENT TRAINING</fullName>
            </value>
            <value>
                <fullName>GARMENT DISPLAY OF REG #</fullName>
            </value>
            <value>
                <fullName>GARMENT RECSKPNG</fullName>
            </value>
            <value>
                <fullName>GARMENT REGISTRATION</fullName>
            </value>
            <value>
                <fullName>HEAT RECOVERY PREMIUM WAGES</fullName>
            </value>
            <value>
                <fullName>LACTATION ACCOMMODATION</fullName>
            </value>
            <value>
                <fullName>LIQUIDATED DAMAGES</fullName>
            </value>
            <value>
                <fullName>MEAL PERIOD PREMIUM WAGES</fullName>
            </value>
            <value>
                <fullName>MINIMUM WAGE</fullName>
            </value>
            <value>
                <fullName>MISCLASSIFICATION</fullName>
            </value>
            <value>
                <fullName>NON-REPORTING</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OVERTIME WAGES</fullName>
            </value>
            <value>
                <fullName>PIECE RATE WAGES</fullName>
            </value>
            <value>
                <fullName>PUBLIC WORKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>