force-app/main/default/objects/Violation_Type__c/recordTypes/BOFE_Violations.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Violations</fullName>
    <active>true</active>
    <description>Violation Types specific to BOFE</description>
    <label>BOFE Violations</label>
</RecordType>