force-app/main/default/objects/Violation_Type__c/recordTypes/JEU_Violations.recordType-meta.xml
<RecordType>
    <fullName>JEU_Violations</fullName>
    <active>true</active>
    <label>JEU Violations</label>
</RecordType>