force-app/main/default/objects/Violation_Type__c/recordTypes/RCI_Violations.recordType-meta.xml
<RecordType>
    <fullName>RCI_Violations</fullName>
    <active>true</active>
    <label>RCI Violations</label>
</RecordType>