force-app/main/default/objects/Violation_Type__c/recordTypes/WCA_Issues_Inactive.recordType-meta.xml
<RecordType>
    <fullName>WCA_Issues_Inactive</fullName>
    <active>true</active>
    <description>Deactivated WCA and Garment Issues</description>
    <label>WCA Issues - Inactive</label>
</RecordType>