force-app/main/default/objects/Violation_Type__c/listViews/RCI.listView-meta.xml
<ListView>
    <fullName>RCI</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Violation_Type__c.RCI_Violations</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>RCI</label>
</ListView>